# ok-nte

./: .gitignore  README.md  README_en.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ai_code_review.yml  build.yml  mirror_test.yml  test.yml
assets/: coco_annotations.json  coco_detection.json
i18n/en_US/LC_MESSAGES/: ok.po
i18n/es_ES/LC_MESSAGES/: ok.mo  ok.po
i18n/ja_JP/LC_MESSAGES/: ok.mo  ok.po
i18n/ko_KR/LC_MESSAGES/: ok.mo  ok.po
i18n/zh_CN/LC_MESSAGES/: ok.mo  ok.po
i18n/zh_TW/LC_MESSAGES/: ok.mo  ok.po
src/: Labels.py  __init__.py  config.py  globals.py  process_feature.py
src/char/: BaseChar.py  CharFactory.py  Jiuyuan.py  Sakiri.py
src/char/custom/: BuiltinComboRegistry.py  CustomChar.py  CustomCharManager.py
src/combat/: BaseCombatTask.py  CombatCheck.py
src/interaction/: NTEInteraction.py
src/scene/: NTEScene.py
src/sound_trigger/: DodgeCounterTrigger.py  SoundCombatContext.py  SoundListener.py
src/tasks/: BaseNTETask.py  DailyTask.py  FishingTask.py
src/tasks/trigger/: AutoCombatTask.py  FastTravelTask.py  SkipDialogTask.py
src/ui/: CharHubTab.py  CharManagerTab.py  TeamManagerTab.py  TeamScannerTab.py  common.py
src/utils/: game_filters.py  image_utils.py
tests/: TestCustomChar.py  TestCustomCharCore.py  TestHealthBar.py
