[project]
name = "ok-nte"
version = "0.1.0"
description = "An image-recognition-based automation tool for Neverness To Everness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ok-script>=1.0.108",
    "onnxocr-ppocrv5>=0.0.15",
    "opencc>=1.2.0",
    "opencv-python>=4.13.0.92",
    "openvino>=2026.1.0",
    "pynput>=1.8.1",
    "pyside6==6.9.1",
    "scikit-image>=0.26.0",
]

[dependency-groups]
dev = [
    "polib>=1.2.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
